--- a/public/index.html
+++ b/public/index.html
@@ -10,106 +10,106 @@
 <body>
     <!-- <img src="assets/snakesandladdersboard.jpg" alt=""> -->
     <div class="container">
-        <div class="insider" id="1"><img src="" alt="" id="img1"></div>
-        <div class="insider" id="2"><img src="" alt="" id="img2"></div>
-        <div class="insider" id="3"><img src="" alt="" id="img3"></div>
-        <div class="insider" id="4"><img src="" alt="" id="img4"></div>
-        <div class="insider" id="5"><img src="" alt="" id="img5"></div>
-        <div class="insider" id="6"><img src="" alt="" id="img6"></div>
-        <div class="insider" id="7"><img src="" alt="" id="img7"></div>
-        <div class="insider" id="8"><img src="" alt="" id="img8"></div>
-        <div class="insider" id="9"><img src="" alt="" id="img9"></div>
-        <div class="insider" id="10"><img src="" alt="" id="img10"></div>
-        <div class="insider" id="11"><img src="" alt="" id="img11"></div>
-        <div class="insider" id="12"><img src="" alt="" id="img12"></div>
-        <div class="insider" id="13"><img src="" alt="" id="img13"></div>
-        <div class="insider" id="14"><img src="" alt="" id="img14"></div>
-        <div class="insider" id="15"><img src="" alt="" id="img15"></div>
-        <div class="insider" id="16"><img src="" alt="" id="img16"></div>
-        <div class="insider" id="17"><img src="" alt="" id="img17"></div>
-        <div class="insider" id="18"><img src="" alt="" id="img18"></div>
-        <div class="insider" id="19"><img src="" alt="" id="img19"></div>
-        <div class="insider" id="20"><img src="" alt="" id="img20"></div>
-        <div class="insider" id="21"><img src="" alt="" id="img21"></div>
-        <div class="insider" id="22"><img src="" alt="" id="img22"></div>
-        <div class="insider" id="23"><img src="" alt="" id="img23"></div>
-        <div class="insider" id="24"><img src="" alt="" id="img24"></div>
-        <div class="insider" id="25"><img src="" alt="" id="img25"></div>
-        <div class="insider" id="26"><img src="" alt="" id="img26"></div>
-        <div class="insider" id="27"><img src="" alt="" id="img27"></div>
-        <div class="insider" id="28"><img src="" alt="" id="img28"></div>
-        <div class="insider" id="29"><img src="" alt="" id="img29"></div>
-        <div class="insider" id="30"><img src="" alt="" id="img30"></div>
-        <div class="insider" id="31"><img src="" alt="" id="img31"></div>
-        <div class="insider" id="32"><img src="" alt="" id="img32"></div>
-        <div class="insider" id="33"><img src="" alt="" id="img33"></div>
-        <div class="insider" id="34"><img src="" alt="" id="img34"></div>
-        <div class="insider" id="35"><img src="" alt="" id="img35"></div>
-        <div class="insider" id="36"><img src="" alt="" id="img36"></div>
-        <div class="insider" id="37"><img src="" alt="" id="img37"></div>
-        <div class="insider" id="38"><img src="" alt="" id="img38"></div>
-        <div class="insider" id="39"><img src="" alt="" id="img39"></div>
-        <div class="insider" id="40"><img src="" alt="" id="img40"></div>
-        <div class="insider" id="41"><img src="" alt="" id="img41"></div>
-        <div class="insider" id="42"><img src="" alt="" id="img42"></div>
-        <div class="insider" id="43"><img src="" alt="" id="img43"></div>
-        <div class="insider" id="44"><img src="" alt="" id="img44"></div>
-        <div class="insider" id="45"><img src="" alt="" id="img45"></div>
-        <div class="insider" id="46"><img src="" alt="" id="img46"></div>
-        <div class="insider" id="47"><img src="" alt="" id="img47"></div>
-        <div class="insider" id="48"><img src="" alt="" id="img48"></div>
-        <div class="insider" id="49"><img src="" alt="" id="img49"></div>
-        <div class="insider" id="50"><img src="" alt="" id="img50"></div>
-        <div class="insider" id="51"><img src="" alt="" id="img51"></div>
-        <div class="insider" id="52"><img src="" alt="" id="img52"></div>
-        <div class="insider" id="53"><img src="" alt="" id="img53"></div>
-        <div class="insider" id="54"><img src="" alt="" id="img54"></div>
-        <div class="insider" id="55"><img src="" alt="" id="img55"></div>
-        <div class="insider" id="56"><img src="" alt="" id="img56"></div>
-        <div class="insider" id="57"><img src="" alt="" id="img57"></div>
-        <div class="insider" id="58"><img src="" alt="" id="img58"></div>
-        <div class="insider" id="59"><img src="" alt="" id="img59"></div>
-        <div class="insider" id="60"><img src="" alt="" id="img60"></div>
-        <div class="insider" id="61"><img src="" alt="" id="img61"></div>
-        <div class="insider" id="62"><img src="" alt="" id="img62"></div>
-        <div class="insider" id="63"><img src="" alt="" id="img63"></div>
-        <div class="insider" id="64"><img src="" alt="" id="img64"></div>
-        <div class="insider" id="65"><img src="" alt="" id="img65"></div>
-        <div class="insider" id="66"><img src="" alt="" id="img66"></div>
-        <div class="insider" id="67"><img src="" alt="" id="img67"></div>
-        <div class="insider" id="68"><img src="" alt="" id="img68"></div>
-        <div class="insider" id="69"><img src="" alt="" id="img69"></div>
-        <div class="insider" id="70"><img src="" alt="" id="img70"></div>
-        <div class="insider" id="71"><img src="" alt="" id="img71"></div>
-        <div class="insider" id="72"><img src="" alt="" id="img72"></div>
-        <div class="insider" id="73"><img src="" alt="" id="img73"></div>
-        <div class="insider" id="74"><img src="" alt="" id="img74"></div>
-        <div class="insider" id="75"><img src="" alt="" id="img75"></div>
-        <div class="insider" id="76"><img src="" alt="" id="img76"></div>
-        <div class="insider" id="77"><img src="" alt="" id="img77"></div>
-        <div class="insider" id="78"><img src="" alt="" id="img78"></div>
-        <div class="insider" id="79"><img src="" alt="" id="img79"></div>
-        <div class="insider" id="80"><img src="" alt="" id="img80"></div>
-        <div class="insider" id="81"><img src="" alt="" id="img81"></div>
-        <div class="insider" id="82"><img src="" alt="" id="img82"></div>
-        <div class="insider" id="83"><img src="" alt="" id="img83"></div>
-        <div class="insider" id="84"><img src="" alt="" id="img84"></div>
-        <div class="insider" id="85"><img src="" alt="" id="img85"></div>
-        <div class="insider" id="86"><img src="" alt="" id="img86"></div>
-        <div class="insider" id="87"><img src="" alt="" id="img87"></div>
-        <div class="insider" id="88"><img src="" alt="" id="img88"></div>
-        <div class="insider" id="89"><img src="" alt="" id="img89"></div>
-        <div class="insider" id="90"><img src="" alt="" id="img90"></div>
-        <div class="insider" id="91"><img src="" alt="" id="img91"></div>
-        <div class="insider" id="92"><img src="" alt="" id="img92"></div>
-        <div class="insider" id="93"><img src="" alt="" id="img93"></div>
-        <div class="insider" id="94"><img src="" alt="" id="img94"></div>
-        <div class="insider" id="95"><img src="" alt="" id="img95"></div>
-        <div class="insider" id="96"><img src="" alt="" id="img96"></div>
-        <div class="insider" id="97"><img src="" alt="" id="img97"></div>
-        <div class="insider" id="98"><img src="" alt="" id="img98"></div>
-        <div class="insider" id="99"><img src="" alt="" id="img99"></div>
-        <div class="insider" id="100"><img src="" alt="" id="img100"></div>
+        <div class="insider" id="1"></div>
+        <div class="insider" id="2"></div>
+        <div class="insider" id="3"></div>
+        <div class="insider" id="4"></div>
+        <div class="insider" id="5"></div>
+        <div class="insider" id="6"></div>
+        <div class="insider" id="7"></div>
+        <div class="insider" id="8"></div>
+        <div class="insider" id="9"></div>
+        <div class="insider" id="10"></div>
+        <div class="insider" id="11"></div>
+        <div class="insider" id="12"></div>
+        <div class="insider" id="13"></div>
+        <div class="insider" id="14"></div>
+        <div class="insider" id="15"></div>
+        <div class="insider" id="16"></div>
+        <div class="insider" id="17"></div>
+        <div class="insider" id="18"></div>
+        <div class="insider" id="19"></div>
+        <div class="insider" id="20"></div>
+        <div class="insider" id="21"></div>
+        <div class="insider" id="22"></div>
+        <div class="insider" id="23"></div>
+        <div class="insider" id="24"></div>
+        <div class="insider" id="25"></div>
+        <div class="insider" id="26"></div>
+        <div class="insider" id="27"></div>
+        <div class="insider" id="28"></div>
+        <div class="insider" id="29"></div>
+        <div class="insider" id="30"></div>
+        <div class="insider" id="31"></div>
+        <div class="insider" id="32"></div>
+        <div class="insider" id="33"></div>
+        <div class="insider" id="34"></div>
+        <div class="insider" id="35"></div>
+        <div class="insider" id="36"></div>
+        <div class="insider" id="37"></div>
+        <div class="insider" id="38"></div>
+        <div class="insider" id="39"></div>
+        <div class="insider" id="40"></div>
+        <div class="insider" id="41"></div>
+        <div class="insider" id="42"></div>
+        <div class="insider" id="43"></div>
+        <div class="insider" id="44"></div>
+        <div class="insider" id="45"></div>
+        <div class="insider" id="46"></div>
+        <div class="insider" id="47"></div>
+        <div class="insider" id="48"></div>
+        <div class="insider" id="49"></div>
+        <div class="insider" id="50"></div>
+        <div class="insider" id="51"></div>
+        <div class="insider" id="52"></div>
+        <div class="insider" id="53"></div>
+        <div class="insider" id="54"></div>
+        <div class="insider" id="55"></div>
+        <div class="insider" id="56"></div>
+        <div class="insider" id="57"></div>
+        <div class="insider" id="58"></div>
+        <div class="insider" id="59"></div>
+        <div class="insider" id="60"></div>
+        <div class="insider" id="61"></div>
+        <div class="insider" id="62"></div>
+        <div class="insider" id="63"></div>
+        <div class="insider" id="64"></div>
+        <div class="insider" id="65"></div>
+        <div class="insider" id="66"></div>
+        <div class="insider" id="67"></div>
+        <div class="insider" id="68"></div>
+        <div class="insider" id="69"></div>
+        <div class="insider" id="70"></div>
+        <div class="insider" id="71"></div>
+        <div class="insider" id="72"></div>
+        <div class="insider" id="73"></div>
+        <div class="insider" id="74"></div>
+        <div class="insider" id="75"></div>
+        <div class="insider" id="76"></div>
+        <div class="insider" id="77"></div>
+        <div class="insider" id="78"></div>
+        <div class="insider" id="79"></div>
+        <div class="insider" id="80"></div>
+        <div class="insider" id="81"></div>
+        <div class="insider" id="82"></div>
+        <div class="insider" id="83"></div>
+        <div class="insider" id="84"></div>
+        <div class="insider" id="85"></div>
+        <div class="insider" id="86"></div>
+        <div class="insider" id="87"></div>
+        <div class="insider" id="88"></div>
+        <div class="insider" id="89"></div>
+        <div class="insider" id="90"></div>
+        <div class="insider" id="91"></div>
+        <div class="insider" id="92"></div>
+        <div class="insider" id="93"></div>
+        <div class="insider" id="94"></div>
+        <div class="insider" id="95"></div>
+        <div class="insider" id="96"></div>
+        <div class="insider" id="97"></div>
+        <div class="insider" id="98"></div>
+        <div class="insider" id="99"></div>
+        <div class="insider" id="100"></div>
     </div>
     <div id="below_div">
         <div id="new_game_div">
